test/modules/vass/use-a-Math-function.good
use-a-Math-function.chpl:6: error: Cannot find module or enum 'fabs'
