test/modules/vass/use-a-Math-function.bad
use-a-Math-function.chpl:6: error: 'use' of non-module/enum symbol fabs
